--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,9 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
-
-name: .NET
+name: Full Solution CI
 
 on:
   push:
@@ -12,35 +10,50 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  backend:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 6.0.x
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.x
 
-      - name: Restore dependencies
-        run: dotnet restore
+    - name: Restore dependencies
+      run: dotnet restore
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.17.0'
+    - name: Build Backend
+      run: dotnet build --no-restore
 
-      - name: Install dependencies
-        run: npm install
+    - name: Test Backend
+      run: dotnet test --no-build --verbosity normal
 
-      - name: Install Husky
-        run: npx husky install
-        working-directory: ../
+  frontend:
+    runs-on: ubuntu-latest
+    needs: backend
 
-      - name: Build
-        run: dotnet build --no-restore
+    steps:
+    - uses: actions/checkout@v3
 
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18.17.0'
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./src/MLS.MatLidStoreUI
+
+    - name: Install Husky
+      run: npx husky install
+      working-directory: ../
+
+    - name: Build Angular application
+      run: npm run build
+      working-directory: ./src/MLS.MatLidStoreUI
+
+    - name: Test Angular application
+      run: npm run test -- --watch=false
+      working-directory: ./src/MLS.MatLidStoreUI
