Update CI workflow and Husky installation process
- Updated `dotnet.yml` to improve CI for .NET project
- Retained workflow triggers on `push` and `pull_request`
- Set `node-version` to `18.17.0`
- Added `HUSKY=0` to skip Husky installation in CI
- Removed explicit `npx husky install` step
- Modified `prepare` script to conditionally install Husky

--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.{ts,html}\"",
     "lint": "eslint \"src/**/*.{ts,html}\"",
     "lint:fix": "prettier --write \"src/**/*.{ts,html}\" --ignore-unknown && eslint \"src/**/*.{ts,html}\" --fix",
-    "prepare": "husky install"
+    "prepare": "if [ -d .git ]; then husky install; fi"
   },
   "private": true,
   "dependencies": {
