--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,4 @@
-﻿# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: Full Solution CI
+﻿name: Full Solution CI
 
 on:
   push:
@@ -44,11 +41,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      env:
+        HUSKY: 0  # Bỏ qua cài đặt husky trong CI
       working-directory: ./src/MLS.MatLidStoreUI
-
-    - name: Install Husky
-      run: npx husky install
-      working-directory: ../
 
     - name: Build Angular application
       run: npm run build
