--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.{ts,html}\"",
     "lint": "eslint \"src/**/*.{ts,html}\"",
     "lint:fix": "prettier --write \"src/**/*.{ts,html}\" --ignore-unknown && eslint \"src/**/*.{ts,html}\" --fix",
-    "prepare": "if [ -d .git ]; then husky install; fi"
+    "prepare": "if exist .git (husky install)"
   },
   "private": true,
   "dependencies": {
