--- a/src/MLS.MatLidStoreUI/package.json
+++ b/src/MLS.MatLidStoreUI/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.{ts,html}\"",
     "lint": "eslint \"src/**/*.{ts,html}\"",
     "lint:fix": "prettier --write \"src/**/*.{ts,html}\" --ignore-unknown && eslint \"src/**/*.{ts,html}\" --fix",
-    "prepare": "if exist .git (husky install)"
+    "prepare": "node -e \"require('shelljs').test('-d', '.git') && require('child_process').execSync('husky install')\""
   },
   "private": true,
   "dependencies": {
@@ -68,6 +68,7 @@
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "shelljs": "^0.8.5",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
   },
