--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-﻿# This workflow will build a .NET project
+# This workflow will build a .NET project and deploy the Angular frontend to GitHub Pages.
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: Full Solution CI
@@ -51,7 +51,7 @@ jobs:
       working-directory: ../
 
     - name: Build Angular application
-      run: npm run build
+      run: ng build --configuration production --output-path ../../docs --base-href /MatLidStore/
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Test Angular application
@@ -59,3 +59,8 @@ jobs:
       #run: npm run test -- --watch=false
       working-directory: ./src/MLS.MatLidStoreUI
 
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./src/MLS.MatLidStoreUI/dist
