--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Install Husky
       run: npx husky install
-      working-directory: ../
+      working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Build Angular application
       run: ng build --configuration production --output-path ../../docs --base-href /MatLidStore/
@@ -56,11 +56,12 @@ jobs:
 
     - name: Test Angular application
       run: echo "Skipping tests as no .spec.ts files are present"
-      #run: npm run test -- --watch=false
+      # run: npm run test -- --watch=false
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./src/MLS.MatLidStoreUI/dist
+        publish_dir: ./docs
+        publish_branch: gh-pages
