--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,7 +47,7 @@ jobs:
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Install Angular CLI
-      run: npm install -g @angular/cli
+      run: npm install -g @angular/cli@16.2.16
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Install Husky
