--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -55,9 +55,15 @@ jobs:
       working-directory: ../
 
     - name: Build Angular application
-      run: ng build --configuration production --output-path ../../docs --base-href /MatLidStore/
+      run: ng build --configuration production --output-path docs --base-href /MatLidStore/
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Test Angular application
       run: echo "Skipping tests as no .spec.ts files are present"
       working-directory: ./src/MLS.MatLidStoreUI
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./src/MLS.MatLidStoreUI/docs
